Updated site for Ads

--- a/index.html
+++ b/index.html
@@ -80,26 +80,7 @@
       <!-- Paste Adsterra Script Here -->
     </div>
 
-    <!-- Hindi Dubbed -->
-    <div class="links-section" data-drag-enabled="true">
-      <h2><i class="fa-solid fa-language"></i> Hindi Dubbed</h2>
-      <div class="links-list">
-        <a class="link-btn" href="https://www.rareanimes.co/" target="_blank" rel="noopener noreferrer"
-          data-drag-enabled="true">
-          <i class="fa-solid fa-closed-captioning"></i> Rareanimes
-        </a>
-        <a class="link-btn" href="https://pikahd.eu/" target="_blank" rel="noopener noreferrer"
-          data-drag-enabled="true">
-          <i class="fa-solid fa-closed-captioning"></i> Pikahd
-        </a>
-        <a class="link-btn" href="https://animeflix.pm/" target="_blank" rel="noopener noreferrer"
-          data-drag-enabled="true">
-          <i class="fa-solid fa-closed-captioning"></i> Animeflix
-        </a>
-      </div>
-    </div>
-
-    <!-- English Sub/Dub -->
+    <!-- English Sub/Dub (Moved Up) -->
     <div class="links-section" data-drag-enabled="true">
       <h2><i class="fa-solid fa-globe"></i> English Sub / Dub</h2>
       <div class="links-list">
@@ -122,6 +103,62 @@
         <a class="link-btn" href="https://aniwatch.com.ro/" target="_blank" rel="noopener noreferrer"
           data-drag-enabled="true">
           <i class="fa-solid fa-closed-captioning"></i> Aniwatch
+        </a>
+        <a class="link-btn" href="https://zorotv.com.in/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Zoro TV
+        </a>
+        <a class="link-btn" href="https://miruro.su/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Miruro
+        </a>
+        <a class="link-btn" href="https://www.animeparadise.moe/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Anime Paradise
+        </a>
+      </div>
+    </div>
+
+    <!-- Adsterra Container (New - Between Sections) -->
+    <div class="ad-container" data-drag-enabled="true" aria-label="Advertisement">
+      <div class="ad-placeholder">
+        <i class="fa-solid fa-rectangle-ad"></i>
+        <span>Ad Space (Between)</span>
+      </div>
+      <!-- Paste Adsterra Script Here -->
+    </div>
+
+    <!-- Hindi Dubbed (Moved Down) -->
+    <div class="links-section" data-drag-enabled="true">
+      <h2><i class="fa-solid fa-language"></i> Hindi Dubbed</h2>
+      <div class="links-list">
+        <a class="link-btn" href="https://www.rareanimes.co/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Rareanimes
+        </a>
+        <a class="link-btn" href="https://pikahd.eu/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Pikahd
+        </a>
+        <a class="link-btn" href="https://animeflix.pm/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Animeflix
+        </a>
+        <a class="link-btn" href="https://www.animedubhindi.me/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Anime Dub Hindi
+        </a>
+        <a class="link-btn" href="https://animixstream.com/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> AnimixStream
+        </a>
+        <a class="link-btn" href="https://animevilla.in/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Anime Villa
+        </a>
+        <a class="link-btn" href="https://hindianimeverse.org/" target="_blank" rel="noopener noreferrer"
+          data-drag-enabled="true">
+          <i class="fa-solid fa-closed-captioning"></i> Hindi Anime Verse
         </a>
       </div>
     </div>
