Update favicon link for Rareanimes site

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="links-list">
         <a class="link-btn" href="https://www.rareanimes.co/" target="_blank" rel="noopener noreferrer"
           data-drag-enabled="true">
-          <img src="https://www.google.com/s2/favicons?domain=rareanimes.co&sz=64" alt="Rareanimes"> Rareanimes
+          <img src="https://www.google.com/s2/favicons?domain=rareanimes.app&sz=64" alt="Rareanimes"> Rareanimes
         </a>
         <a class="link-btn" href="https://pikahd.eu/" target="_blank" rel="noopener noreferrer"
           data-drag-enabled="true">
